--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             <img src="https://cdn.discordapp.com/attachments/689017273050202134/797498087098155038/unknown.png" alt="logoMeteo">
         </div>
         <div id="temps">
+            <input type="text" id="inputState">
+            <button id="enter">Entrer</button>
             <h1 id="state"></h1>
             <p id="date"></p>
-            <img id="imageTemps" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/271/sun_2600-fe0f.png">
+            <img id="imageTemps" src="">
             <p id="typeTemps"></p>
             <p id="temperature"></p>
             <div class="row">
@@ -22,11 +24,6 @@
                 <p id="tempsMin">Min: </p>
             </div>
             <div id="autreInfos">
-                <div class="traits"></div>
-                <div class="row">
-                    <p id="sunrise">Lever du soleil: </p>
-                    <p id="sunset">Coucher du soleil: </p>
-                </div>
                 <div class="traits"></div>
                 <div class="row">
                     <p id="humidity">Humidité: </p>
