--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
     <div id="container">
         <div id="logoimg">
             <img src="https://cdn.discordapp.com/attachments/689017273050202134/797498087098155038/unknown.png" alt="logoMeteo">
         </div>
         <div id="temps">
-            <input type="text" id="inputState">
-            <button id="enter">Entrer</button>
             <h1 id="state"></h1>
             <p id="date"></p>
             <img id="imageTemps" src="">
@@ -31,9 +28,39 @@
                     <p id="windSpeed">Vent: </p>
                 </div>
             </div>
+            <div id="previsions">
+                <div id="jour1">
+                    <p id="date1"></p>
+                    <img id="imageTemps1" src="">
+                    <p id="tempsMax1">Max: </p>
+                    <p id="tempsMin1">Min: </p>
+                </div>
+                <div class="traits2"></div>
+                <div id="jour2">
+                    <p id="date2"></p>
+                    <img id="imageTemps2" src="">
+                    <p id="tempsMax2">Max: </p>
+                    <p id="tempsMin2">Min: </p>
+                </div>
+                <div class="traits2"></div>
+                <div id="jour3">
+                    <p id="date3"></p>
+                    <img id="imageTemps3" src="">
+                    <p id="tempsMax3">Max: </p>
+                    <p id="tempsMin3">Min: </p>
+                </div>
+                <div class="traits2"></div>
+                <div id="jour4">
+                    <p id="date4"></p>
+                    <img id="imageTemps4" src="">
+                    <p id="tempsMax4">Max: </p>
+                    <p id="tempsMin4">Min: </p>
+                </div>
+            </div>
         </div>
     </div>
 
     <script src="app.js"></script>
+    <script src="app2.js"></script>
 </body>
 </html>
